--- a/src/main/resources/styles/mahjong-points.css
+++ b/src/main/resources/styles/mahjong-points.css
@@ -9,18 +9,24 @@ body {
 
 @media (min-width: 768px) { 
   .mr-tile-container {
-    font-size: 1.275vw;
+    /*font-size: 1.275vw;*/
+    font-size: 1.175vw;
   }
 }
 
 @media (min-width: 992px) { 
   .mr-tile-container {
-    font-size: 0.97vw;
+    font-size: 0.9vw;
   }
 }
 
 .mr-tile-field {
-  width: 46.8em;
+  /*width: 50em;*/
+}
+
+.mr-tile-field div {
+  display: flex;
+  justify-content: space-between;
 }
 
 a.mr-tile img {
@@ -29,11 +35,50 @@ a.mr-tile img {
   /* https://cssgradient.io/ */
   background: linear-gradient(165deg, rgba(255,255,255,1) 0%, rgba(194,194,194,1) 8%, rgba(223,223,223,1) 33%, rgba(251,251,251,1) 100%);
   border-radius: 0.5em;
-  margin: 0.1em;
+  margin: 0.2em 0.3em;
   cursor: pointer;
 }
 
 .not-selectable {
-    cursor: not-allowed !important;
-    opacity: 40%;
+  cursor: not-allowed !important;
+  opacity: 40%;
+}
+
+.mr-figure-holder .btn {
+  width: 100%;
+}
+
+.mr-figure {
+  border: 1px solid lightgray;
+  /*border-radius: 1rem;*/
+  border-radius: 0.375rem;
+  height: 4.2rem;
+  position: relative;
+  margin-bottom: 0.4rem;
+}
+
+.mr-figure span {
+  position: absolute;
+  font-size: 3rem;
+  opacity: 0.3;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.mr-figure .mr-tile-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /*font-size: 0.2rem!important;*/
+  font-size: 6pt;
+}
+
+.mr-selected {
+  border:  3px solid lightblue;
 }
