--- a/src/main/resources/styles/mahjong-points.css
+++ b/src/main/resources/styles/mahjong-points.css
@@ -39,6 +39,8 @@ a.mr-tile img {
   border-radius: 0.5em;
   margin: 0.2em 0.3em;
   cursor: pointer;
+  margin-top: 0.49rem;
+  margin-bottom: 0.4rem;
 }
 
 .not-selectable {
@@ -50,8 +52,9 @@ a.mr-tile img {
   padding-left: 3rem;
 }
 
-.mr-figure-holder .btn {
+#mr_result .btn {
   width: 100%;
+  height: 100%;
 }
 
 .mr-figure {
