--- a/styles/mahjong-points.css
+++ b/styles/mahjong-points.css
@@ -32,25 +32,28 @@ body {
   }
 }
 
-.mr-tile-field {
-  /*width: 50em;*/
-}
-
-.mr-tile-field div {
+.mr-tile-field > div {
   display: flex;
   justify-content: space-between;
 }
 
-a.mr-tile img {
+.mr-tile {
+  display: inline-block;
   width: 5em;
-  background: rgb(255, 255, 255);
-  /* https://cssgradient.io/ */
-  background: linear-gradient(165deg, rgba(255, 255, 255, 1) 0%, rgba(194, 194, 194, 1) 8%, rgba(223, 223, 223, 1) 33%, rgba(251, 251, 251, 1) 100%);
-  border-radius: 0.5em;
-  margin: 0.2em 0.3em;
+  height: 7.1em;
   cursor: pointer;
-  margin-top: 0.49rem;
-  margin-bottom: 0.4rem;
+}
+
+.mr-tile-background {
+  background: linear-gradient(165deg, rgba(255, 255, 255, 1) 0%, rgba(194, 194, 194, 1) 8%, rgba(223, 223, 223, 1) 33%, rgba(251, 251, 251, 1) 100%);
+  border-radius: 0.6em;
+}
+
+.mr-tile-content {
+  background-size: 99%;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
 }
 
 .not-selectable {
@@ -63,7 +66,7 @@ a.mr-tile img {
 }
 
 .mr-vertical-switch .form-switch {
-  padding-left: 3rem;
+  padding-left: 3.2rem;
 }
 
 #mr_result .btn {
