Add font for title

--- a/src/main/resources/styles/mahjong-points.css
+++ b/src/main/resources/styles/mahjong-points.css
@@ -5,6 +5,11 @@ body {
   /*touch-action: none;*/
 }
 
+h1 {
+  font-family: 'Shanghai';
+  font-size: 3rem;
+}
+
 .mr-tile-container {
   font-size: 0.97vw;
 }
