--- a/styles/mahjong-points.css
+++ b/styles/mahjong-points.css
@@ -5,6 +5,11 @@ body {
   /*touch-action: none;*/
 }
 
+h1 {
+  font-family: 'Shanghai';
+  font-size: 3rem;
+}
+
 .mr-tile-container {
   font-size: 0.97vw;
 }
@@ -42,6 +47,16 @@ body {
   width: 5em;
   height: 7.1em;
   cursor: pointer;
+}
+
+.mr-tile.mr-tile-backside {
+  background-size: 100%;
+}
+
+.mr-tile-backside > div {
+  background-image: none !important;
+  border: 3px solid rgba(205,133,63,0.4);
+  border-radius: 0.6em;
 }
 
 .mr-tile-background {
