--- a/src/main/resources/styles/mahjong-points.css
+++ b/src/main/resources/styles/mahjong-points.css
@@ -42,6 +42,10 @@ h1 {
   justify-content: space-between;
 }
 
+.mr-tile-field > div+div {
+  margin-top: 0.3rem;
+}
+
 .mr-tile {
   display: inline-block;
   width: 5em;
