--- a/src/main/resources/styles/mahjong-points.css
+++ b/src/main/resources/styles/mahjong-points.css
@@ -51,8 +51,14 @@ h1 {
   width: 5em;
   height: 7.1em;
   cursor: pointer;
-  transition: transform 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out, width 0.2s ease-in-out;
   z-index: 500;
+  transform-style: preserve-3d;
+}
+
+.mr-tile.mr-invisible {
+  width: 0em;
+  border: none !important;
 }
 
 .mr-alert {
@@ -70,7 +76,7 @@ h1 {
 }
 
 .mr-tile.mr-tile-backside {
-  background-size: 100%;
+  background-size: 5em;
 }
 
 .mr-tile.mr-tile-rotated {
@@ -82,14 +88,18 @@ h1 {
   border: 3px solid rgba(205,133,63,0.4);
   border-radius: 0.6em;
 }
+.mr-tile-backside.mr-invisible > div {
+  border: none;
+}
+
 
 .mr-tile-background {
-  background: linear-gradient(165deg, rgba(255, 255, 255, 1) 0%, rgba(194, 194, 194, 1) 8%, rgba(223, 223, 223, 1) 33%, rgba(251, 251, 251, 1) 100%);
+  background: linear-gradient(165deg, rgba(255, 255, 255, 1) 0%, rgba(194, 194, 194, 1) 12%, rgba(223, 223, 223, 1) 33%, rgba(251, 251, 251, 1) 100%);
   border-radius: 0.6em;
 }
 
 .mr-tile-face {
-  background-size: 99%;
+  background-size: 5em;
   background-repeat: no-repeat;
   width: 100%;
   height: 100%;
@@ -160,7 +170,6 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
-  /*font-size: 0.2rem!important;*/
   font-size: 6pt;
 }
 
