Add loading indicator

--- a/src/main/resources/styles/mahjong-points.css
+++ b/src/main/resources/styles/mahjong-points.css
@@ -5,6 +5,14 @@ body {
   /*touch-action: none;*/
 }
 
+#mr_loading {
+  display: flex;
+}
+
+#mr_loading img {
+  height: 20vw;
+}
+
 h1 {
   font-family: 'Shanghai';
   font-size: 3rem;
