--- a/styles/mahjong-points.css
+++ b/styles/mahjong-points.css
@@ -5,6 +5,14 @@ body {
   /*touch-action: none;*/
 }
 
+#mr_loading {
+  display: flex;
+}
+
+#mr_loading img {
+  height: 20vw;
+}
+
 h1 {
   font-family: 'Shanghai';
   font-size: 3rem;
@@ -37,6 +45,19 @@ h1 {
   }
 }
 
+.mr-error-overlay {
+  position: absolute;
+  top: 0;
+  z-index: 2000;
+  right: 0.5rem;
+  left: 0;
+  opacity: 90%;
+}
+
+.mr-error-overlay span+span {
+  margin-top: 0.5rem;
+}
+
 .mr-tile-field > div {
   display: flex;
   justify-content: space-between;
@@ -51,14 +72,23 @@ h1 {
   width: 5em;
   height: 7.1em;
   cursor: pointer;
-  transition: transform 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out, 
+    width 0.2s ease-in-out,
+    opacity 0.2s ease-in-out;
+  z-index: 500;
+  transform-style: preserve-3d;
+}
+
+.mr-figure .mr-tile.mr-invisible {
+  width: 0em;
+  border: none !important;
 }
 
 .mr-alert {
   background: inherit;
   background-size: 99%;
   
-  animation: blink 0.7s;
+  animation: blink 0.3s;
   animation-iteration-count: 3;
 }
 
@@ -69,7 +99,7 @@ h1 {
 }
 
 .mr-tile.mr-tile-backside {
-  background-size: 100%;
+  background-size: 5em;
 }
 
 .mr-tile.mr-tile-rotated {
@@ -81,14 +111,18 @@ h1 {
   border: 3px solid rgba(205,133,63,0.4);
   border-radius: 0.6em;
 }
+.mr-tile-backside.mr-invisible > div {
+  border: none;
+}
+
 
 .mr-tile-background {
-  background: linear-gradient(165deg, rgba(255, 255, 255, 1) 0%, rgba(194, 194, 194, 1) 8%, rgba(223, 223, 223, 1) 33%, rgba(251, 251, 251, 1) 100%);
+  background: linear-gradient(165deg, rgba(255, 255, 255, 1) 0%, rgba(194, 194, 194, 1) 12%, rgba(223, 223, 223, 1) 33%, rgba(251, 251, 251, 1) 100%);
   border-radius: 0.6em;
 }
 
 .mr-tile-face {
-  background-size: 99%;
+  background-size: 5em;
   background-repeat: no-repeat;
   width: 100%;
   height: 100%;
@@ -159,7 +193,6 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
-  /*font-size: 0.2rem!important;*/
   font-size: 6pt;
 }
 
