--- a/src/main/resources/styles/mahjong-points.css
+++ b/src/main/resources/styles/mahjong-points.css
@@ -102,6 +102,7 @@ h1 {
   display: inline-block;
   width: var(--mr-tile-width);
   height: var(--mr-tile-height);
+  border-radius: var(--mr-tile-border-radius);
   cursor: pointer;
   transition: transform 0.5s ease-in-out, 
     width 0.2s ease-in-out,
@@ -146,8 +147,12 @@ h1 {
 }
 
 .mr-tile.mr-tile-backside {
+  background-size : var(--mr-tile-width)
+}
+
+.mr-tile-backside .mr-tile-face {
   background-size: var(--mr-tile-width);
-  border: var(--mr-tile-border-size) solid rgba(205,133,63,0.4);
+  border: var(--mr-tile-border-size) solid rgba(205,133,63,0.4) !important;
 }
 
 .mr-tile.mr-tile-rotated {
@@ -164,7 +169,6 @@ h1 {
 .mr-tile-background {
   background: linear-gradient(165deg, rgba(255, 255, 255, 1) 0%, rgba(194, 194, 194, 1) 12%, rgba(223, 223, 223, 1) 33%, rgba(251, 251, 251, 1) 100%);
   border-radius: var(--mr-tile-border-radius);
-  border: var(--mr-tile-border-size) solid black;
 }
 
 .mr-tile-face {
@@ -174,6 +178,11 @@ h1 {
   background-position-y: calc(-1 * var(--mr-tile-border-size));
   width: 100%;
   height: 100%;
+}
+
+.mr-tile-face[mr-tile] {
+  border-radius: var(--mr-tile-border-radius);
+  border: var(--mr-tile-border-size) solid black;
 }
 
 .not-selectable {
