--- a/src/main/resources/styles/mahjong-points.css
+++ b/src/main/resources/styles/mahjong-points.css
@@ -102,13 +102,13 @@ h1 {
   display: inline-block;
   width: var(--mr-tile-width);
   height: var(--mr-tile-height);
-  border-radius: var(--mr-tile-border-radius);
   cursor: pointer;
   transition: transform 0.5s ease-in-out, 
     width 0.2s ease-in-out,
     opacity 0.2s ease-in-out;
   z-index: 100;
   transform-style: preserve-3d;
+  overflow: hidden;
 }
 
 .mr-figure .mr-tile.mr-invisible {
@@ -147,7 +147,8 @@ h1 {
 }
 
 .mr-tile.mr-tile-backside {
-  background-size : var(--mr-tile-width)
+  background-size : var(--mr-tile-width);
+  border-radius: var(--mr-tile-border-radius);
 }
 
 .mr-tile-backside .mr-tile-face {
@@ -168,7 +169,6 @@ h1 {
 
 .mr-tile-background {
   background: linear-gradient(165deg, rgba(255, 255, 255, 1) 0%, rgba(194, 194, 194, 1) 12%, rgba(223, 223, 223, 1) 33%, rgba(251, 251, 251, 1) 100%);
-  border-radius: var(--mr-tile-border-radius);
 }
 
 .mr-tile-face {
@@ -178,6 +178,7 @@ h1 {
   background-position-y: calc(-1 * var(--mr-tile-border-size));
   width: 100%;
   height: 100%;
+  width: var(--mr-tile-width)
 }
 
 .mr-tile-face[mr-tile] {
