fix border radius

--- a/src/main/resources/styles/mahjong-points.css
+++ b/src/main/resources/styles/mahjong-points.css
@@ -109,6 +109,7 @@ h1 {
   z-index: 100;
   transform-style: preserve-3d;
   overflow: hidden;
+  border-radius: var(--mr-tile-border-radius);
 }
 
 .mr-figure .mr-tile.mr-invisible {
